force-app/main/default/objects/KimbleAgent__LicenseSubscription__c/KimbleAgent__LicenseSubscription__c.object-meta.xml
<CustomObject>
    <label>Kimble Sense License Subscription</label>
    <nameField>
        <label>License Subscription</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kimble Sense License Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>