force-app/main/default/objects/KimbleAgent__LicenseSubscription__c/fields/KimbleAgent__LicenseType__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__LicenseType__c</fullName>
    <label>License Type</label>
    <referenceTo>KimbleAgent__LicenseType__c</referenceTo>
    <relationshipName>LicenseTypes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>