force-app/main/default/objects/KimbleAgent__LicenseSubscription__c/fields/KimbleAgent__Resource__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resource</label>
    <referenceTo>KimbleOne__Resource__c</referenceTo>
    <relationshipLabel>Resources</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>