force-app/main/default/objects/KimbleAgent__LicenseSubscription__c/fields/KimbleAgent__User__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>User Subscriptions</relationshipLabel>
    <relationshipName>UserSubscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>