force-app/main/default/objects/KimbleAgent__LicenseSubscription__c/listViews/KimbleAgent__All.listView-meta.xml
<ListView>
    <fullName>KimbleAgent__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleAgent__Resource__c</columns>
    <columns>KimbleAgent__User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>